@@ -1,7 +1,7 @@
-:man_page: mongoc_uri_set_auth_source
+:man_page: mongoc_uri_set_auth_mechanism
 
-mongoc_uri_set_auth_source()
-============================
+mongoc_uri_set_auth_mechanism()
+===============================
 
 Synopsis
 --------
@@ -9,18 +9,18 @@ Synopsis
 .. code-block:: c
 
   bool
-  mongoc_uri_set_auth_source (mongoc_uri_t *uri, const char *value);
+  mongoc_uri_set_auth_mechanism (mongoc_uri_t *uri, const char *value);
 
 Parameters
 ----------
 
 * ``uri``: A :symbol:`mongoc_uri_t`.
-* ``value``: The new "authSource" value.
+* ``value``: The new "authMechanism" value.
 
 Description
 -----------
 
-Sets the "authSource" URI option, after the URI has been parsed from a string.
+Sets the "authMechanism" URI option, such as "SCRAM-SHA-1" or "GSSAPI", after the URI has been parsed from a string.
 
 Updates the option in-place if already set, otherwise appends it to the URI's :symbol:`bson:bson_t` of options.
 
